--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,11 @@
         </div>
       </div>
       <div id="empty"></div>
-      <footer><a href="https://github.com/MiraZzle">MatějFoukal®</a></footer>
+      <footer>
+        <a href="https://github.com/MiraZzle" target="_blank"
+          >® 2022 | Matěj Foukal</a
+        >
+      </footer>
     </div>
   </body>
 </html>
