--- a/rentals.html
+++ b/rentals.html
@@ -53,7 +53,7 @@
                   <ul class="model-list">
                     <li>MASERATI GRANTURISMO S</li>
                     <li>ALFA ROMEO GIULIA GTAM</li>
-                    <li>LAMORGHINI AVENTADOR</li>
+                    <li>LAMBORGHINI AVENTADOR</li>
                   </ul>
                 </details>
               </li>
@@ -219,7 +219,7 @@
                 alt=""
               />
             </div>
-            <h6>Lamorghini aventador</h6>
+            <h6>Lamborghini aventador</h6>
             <p class="desc">759HP | V12 | 355km/h</p>
             <hr />
             <div class="sub-sec">
@@ -283,7 +283,11 @@
           </div>
         </div>
       </div>
-      <footer><a href="https://github.com/MiraZzle">MatějFoukal®</a></footer>
+      <footer>
+        <a href="https://github.com/MiraZzle" target="_blank"
+          >® 2022 | Matěj Foukal</a
+        >
+      </footer>
     </div>
   </body>
 </html>
