--- a/tracks.html
+++ b/tracks.html
@@ -40,7 +40,9 @@
                 <td>Česká Republika</td>
                 <td>5 403m</td>
                 <td>
-                  <a href="https://cs.wikipedia.org/wiki/Masaryk%C5%AFv_okruh"
+                  <a
+                    href="https://cs.wikipedia.org/wiki/Masaryk%C5%AFv_okruh"
+                    target="_blank"
                     >Informace</a
                   >
                 </td>
@@ -50,7 +52,9 @@
                 <td rowspan="3">Německo</td>
                 <td>5 148m</td>
                 <td>
-                  <a href="https://cs.wikipedia.org/wiki/Masaryk%C5%AFv_okruh"
+                  <a
+                    href="https://cs.wikipedia.org/wiki/Nürburgring"
+                    target="_blank"
                     >Informace</a
                   >
                 </td>
@@ -59,7 +63,9 @@
                 <td>Sachsenring</td>
                 <td>3 508m</td>
                 <td>
-                  <a href="https://en.wikipedia.org/wiki/Sachsenring"
+                  <a
+                    href="https://en.wikipedia.org/wiki/Sachsenring"
+                    target="_blank"
                     >Informace</a
                   >
                 </td>
@@ -68,7 +74,9 @@
                 <td>Hockenheimring</td>
                 <td>4 574m</td>
                 <td>
-                  <a href="https://en.wikipedia.org/wiki/Hockenheimring"
+                  <a
+                    href="https://en.wikipedia.org/wiki/Hockenheimring"
+                    target="_blank"
                     >Informace</a
                   >
                 </td>
@@ -115,7 +123,11 @@
           </div>
         </div>
       </div>
-      <footer><a href="https://github.com/MiraZzle">MatějFoukal®</a></footer>
+      <footer>
+        <a href="https://github.com/MiraZzle" target="_blank"
+          >® 2022 | Matěj Foukal</a
+        >
+      </footer>
     </div>
   </body>
 </html>
