--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
             corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
             consequatur?”
           </p>
-          <button id="CTA-btn" class="main-btn">
-            <iconify-icon
-              id="slogan-ico"
-              icon="material-symbols:flag-rounded"
-              width="26"
-            ></iconify-icon>
-            <div id="slogan">Chci zážitek!</div>
-          </button>
+          <a href="contact.html"
+            ><button id="CTA-btn" class="main-btn">
+              <iconify-icon
+                id="slogan-ico"
+                icon="material-symbols:flag-rounded"
+                width="26"
+              ></iconify-icon>
+              <div id="slogan">Chci zážitek!</div>
+            </button></a
+          >
         </article>
       </div>
 
@@ -174,7 +176,9 @@
       </div>
 
       <footer id="item7">
-        <a href="https://github.com/MiraZzle">MatějFoukal®</a>
+        <a href="https://github.com/MiraZzle" target="_blank"
+          >® 2022 | Matěj Foukal</a
+        >
       </footer>
     </div>
   </body>
