--- a/index.html
+++ b/index.html
@@ -27,23 +27,21 @@
       </nav>
 
       <div id="CTA">
-        <article class="quote">
+        <div class="quote">
           <p>
             “Ut enim ad minima veniam, quis nostrum exercitationem ullam
             corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
             consequatur?”
           </p>
-          <a href="contact.html"
-            ><button id="CTA-btn" class="main-btn">
-              <iconify-icon
-                id="slogan-ico"
-                icon="material-symbols:flag-rounded"
-                width="26"
-              ></iconify-icon>
-              <div id="slogan">Chci zážitek!</div>
-            </button></a
-          >
-        </article>
+          <button id="CTA-btn" class="main-btn">
+            <iconify-icon
+              id="slogan-ico"
+              icon="material-symbols:flag-rounded"
+              width="26"
+            ></iconify-icon>
+            Chci zážitek!
+          </button>
+        </div>
       </div>
 
       <div id="title1"><h2>O nás</h2></div>
