--- a/contact.html
+++ b/contact.html
@@ -48,24 +48,30 @@
                   class="ct-icon"
                   icon="material-symbols:phone-in-talk"
                   width="40"
-                ></iconify-icon
-                >+420 777 888 999
+                ></iconify-icon>
+                <a href="tel:420777888999">+420 777 888 999</a>
               </div>
               <div class="ct-info">
                 <iconify-icon
                   icon="ion:mail"
                   width="40"
                   class="ct-icon"
-                ></iconify-icon
-                >autoZing@pujcauto.com
+                ></iconify-icon>
+                <a href="mailto: autoZing@pujcauto.com"
+                  >autoZing@pujcauto.com</a
+                >
               </div>
               <div class="ct-info">
                 <iconify-icon
                   class="ct-icon"
                   icon="mdi:map-marker-radius"
                   width="40"
-                ></iconify-icon
-                >Randova 3167/7, Smíchov, 150 00 Praha 5
+                ></iconify-icon>
+                <a
+                  target="_blank"
+                  href="https://www.google.com/search?q=Randova+3167%2F7%2C+Sm%C3%ADchov%2C+150+00+Praha+5&tbm=lcl&sxsrf=ALiCzsb9E_nDE2pcmVtmvL3a3NCYk7j13w%3A1670270774854&ei=Nk-OY7LHM4DBxc8PvJWlgAc&ved=0ahUKEwiyutrBo-P7AhWAYPEDHbxKCXAQ4dUDCAk&uact=5&oq=Randova+3167%2F7%2C+Sm%C3%ADchov%2C+150+00+Praha+5&gs_lcp=Cg1nd3Mtd2l6LWxvY2FsEAMyAggmOgQIIxAnUNMDWNMDYPsEaAJwAHgAgAFXiAGfAZIBATKYAQCgAQKgAQHAAQE&sclient=gws-wiz-local#rlfi=hd:;si:16933460042888893321,l,CihSYW5kb3ZhIDMxNjcvNywgU23DrWNob3YsIDE1MCAwMCBQcmFoYSA1kgEQZ2VvY29kZWRfYWRkcmVzcw;mv:[[50.06846867731903,14.397408493475314],[50.06810872268097,14.396847706524689]]"
+                  >Randova 3167/7, Smíchov, 150 00 Praha 5</a
+                >
               </div>
             </div>
             <div></div>
