--- a/rentals.html
+++ b/rentals.html
@@ -116,7 +116,7 @@
               />
             </div>
             <h6>BMW M3 Touring</h6>
-            <p class="desc">510HP | V6 | 249km/h</p>
+            <p>510HP | V6 | 249km/h</p>
             <hr />
             <div class="sub-sec">
               <button class="panel-button sub-item">Jedu</button>
@@ -166,7 +166,7 @@
               />
             </div>
             <h6>BMW z4</h6>
-            <p class="desc">335HP | V6 | 250km/h</p>
+            <p class>335HP | V6 | 250km/h</p>
             <hr />
             <div class="sub-sec">
               <button class="panel-button sub-item">Jedu</button>
@@ -220,7 +220,7 @@
               />
             </div>
             <h6>Lamborghini aventador</h6>
-            <p class="desc">759HP | V12 | 355km/h</p>
+            <p>759HP | V12 | 355km/h</p>
             <hr />
             <div class="sub-sec">
               <button class="panel-button sub-item">Jedu</button>
@@ -274,7 +274,7 @@
               />
             </div>
             <h6>Dodge challenger</h6>
-            <p class="desc">305HP | V6 | 320km/h</p>
+            <p>305HP | V6 | 320km/h</p>
             <hr />
             <div class="sub-sec">
               <button class="panel-button sub-item">Jedu</button>
