--- a/tracks.html
+++ b/tracks.html
@@ -29,12 +29,15 @@
           <h2>okruhy</h2>
           <div class="table-space">
             <table>
-              <tr class="header-row">
-                <th><h3>Název</h3></th>
-                <th><h3>Země</h3></th>
-                <th><h3>Délka</h3></th>
-                <th><h3>Další informace</h3></th>
-              </tr>
+              <thead>
+                <tr class="header-row">
+                  <th>Název</th>
+                  <th>Země</th>
+                  <th>Délka</th>
+                  <th>Další informace</th>
+                </tr>
+              </thead>
+
               <tr class="row1">
                 <td>Automotodrom Brno</td>
                 <td>Česká Republika</td>
