--- a/contact.html
+++ b/contact.html
@@ -10,24 +10,25 @@
     <link rel="stylesheet" href="contact.css" />
 
     <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+    <script defer src="app.js"></script>
   </head>
   <body>
     <div class="grid-wrapper">
       <nav>
         <h4 class="name">autoZing</h4>
         <ul class="nav-links">
-          <li><a href="index.html">Úvod</a></li>
+          <li><a href="index.html">Homepage</a></li>
           <li>|</li>
-          <li><a href="rentals.html">Nabídka</a></li>
+          <li><a href="rentals.html">Offers</a></li>
           <li>|</li>
-          <li><a href="tracks.html">Okruh</a></li>
+          <li><a href="tracks.html">Tracks</a></li>
           <li>|</li>
-          <li><a href="contact.html">Kontakt</a></li>
+          <li><a href="contact.html">Contacts</a></li>
         </ul>
       </nav>
 
       <div id="contact-bg">
-        <div class="info-bg">
+        <div class="info-bg hidden">
           <div id="header-contact"><h2>Kontakt</h2></div>
           <div id="description">
             <div class="ct-content">
