--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <body>
     <div class="grid-wrapper">
       <nav>
-        <h4 class="name">autoZing</h4>
+        <h4 class="name">auto<span>Zing</span></h4>
         <ul class="nav-links">
           <li><a href="index.html">Homepage</a></li>
           <li>|</li>
@@ -28,10 +28,10 @@
       </nav>
 
       <div id="contact-bg">
-        <div class="info-bg hidden">
+        <div class="info-bg">
           <div id="header-contact"><h2>Kontakt</h2></div>
           <div id="description">
-            <div class="ct-content">
+            <div class="ct-content hidden">
               Etiam commodo dui eget wisi. Sed elit dui, pellentesque a,
               faucibus vel, interdum nec, diam. Sed ac dolor sit amet purus
               malesuada congue. Ut tempus purus at lorem. Itaque earum rerum hic
@@ -41,7 +41,7 @@
               tincidunt ac pede.
             </div>
           </div>
-          <div id="contact-links">
+          <div id="contact-links" class="hidden">
             <div></div>
             <div class="ct-parent">
               <div class="ct-info">
