--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="grid-wrapper">
       <nav>
-        <h4 class="name">autoZing</h4>
+        <h4 class="name">auto<span>Zing</span></h4>
         <ul class="nav-links">
           <li><a href="index.html">Homepage</a></li>
           <li>|</li>
@@ -50,13 +50,14 @@
       <div id="section1">
         <article class="section-div">
           <h3 class="hidden">1</h3>
+
           <p class="hidden">
             Mat and his friend Jack had always dreamed of starting their own
-            business. One day, they came across a great deal on a fleet of
-            gently used cars and decided to take the plunge and start a car
-            rental business.
+            business. One day, they came across a <span>great deal</span> on a
+            fleet of gently used cars and decided to take the plunge and start a
+            car rental business.
           </p>
-          <button class="main-btn">Click me</button>
+          <button class="main-btn">Our Story</button>
         </article>
       </div>
       <div id="section2">
@@ -65,11 +66,11 @@
           <p class="hidden">
             The founders made sure to provide top-notch customer service,
             ensuring that their clients had a great experience with their sleek
-            and stylish sports cars. Jack and Mat were confident that their
-            dedication to providing the best service would lead to many more
-            satisfied customers in the future.
+            and <span>stylish sports cars</span>. Jack and Mat were confident
+            that their dedication to providing the best service would lead to
+            many more satisfied customers in the future.
           </p>
-          <button class="main-btn">Click me</button>
+          <button class="main-btn">Selection</button>
         </article>
       </div>
       <div id="section3">
@@ -77,12 +78,13 @@
           <h3 class="hidden">3</h3>
           <p class="hidden">
             Mats and Jacks sports car rental service has become a huge success
-            in recent years. Their dedication to providing top-quality vehicles
+            in recent years. Their dedication to providing
+            <span>top-quality vehicles</span>
             and excellent customer service has helped them stand out in a
             competitive market. Today, they have a loyal customer base and their
             business continues to thrive.
           </p>
-          <button class="main-btn">Click me</button>
+          <button class="main-btn">Today</button>
         </article>
       </div>
 
