--- a/rentals.html
+++ b/rentals.html
@@ -13,7 +13,7 @@
   <body>
     <div class="grid-wrapper">
       <nav>
-        <h4 class="name">autoZing</h4>
+        <h4 class="name">auto<span>Zing</span></h4>
         <ul class="nav-links">
           <li><a href="index.html">Homepage</a></li>
           <li>|</li>
@@ -88,8 +88,8 @@
             <p>620HP | V10 | 331km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -104,8 +104,8 @@
             <p>275HP | V4 | 264km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -120,8 +120,8 @@
             <p>510HP | V6 | 249km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">2000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">280 € / Day</p>
             </div>
           </div>
         </div>
@@ -138,8 +138,8 @@
             <p>600HP | V10 | 250km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -154,8 +154,8 @@
             <p>576HP | V8 | 318km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -170,8 +170,8 @@
             <p class>335HP | V6 | 250km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">2000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">280 € / Day</p>
             </div>
           </div>
         </div>
@@ -192,8 +192,8 @@
             <p>433HP | V8 | 295km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -208,8 +208,8 @@
             <p>532HP | V6 | 300km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -224,8 +224,8 @@
             <p>759HP | V12 | 355km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">2000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">280 € / Day</p>
             </div>
           </div>
         </div>
@@ -246,8 +246,8 @@
             <p>395HP | V8 | 237.4km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -262,8 +262,8 @@
             <p>670HP | V8 | 339km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">8000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">350 € / Day</p>
             </div>
           </div>
           <div class="car-panel">
@@ -278,8 +278,8 @@
             <p>305HP | V6 | 320km/h</p>
             <hr />
             <div class="sub-sec">
-              <button class="panel-button sub-item">Jedu</button>
-              <p class="sub-item price">2000Kč/den</p>
+              <button class="panel-button sub-item">Drive!</button>
+              <p class="sub-item price">280 € / Day</p>
             </div>
           </div>
         </div>
