--- a/tracks.html
+++ b/tracks.html
@@ -14,7 +14,7 @@
   <body>
     <div class="grid-wrapper">
       <nav>
-        <h4 class="name">autoZing</h4>
+        <h4 class="name">auto<span>Zing</span></h4>
         <ul class="nav-links">
           <li><a href="index.html">Homepage</a></li>
           <li>|</li>
@@ -26,7 +26,7 @@
         </ul>
       </nav>
       <div id="tracks">
-        <div class="table-bg hidden">
+        <div class="table-bg">
           <h2>Tracks</h2>
           <div class="table-space">
             <table>
@@ -89,7 +89,17 @@
           </div>
         </div>
       </div>
-      <div id="empty"></div>
+      <div id="empty">
+        <iframe
+          width="60%"
+          height="60%"
+          src="https://www.youtube.com/embed/h-NJJEE2EjE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
       <div id="track-links">
         <h2>Track Reservations</h2>
         <div class="service-box hidden">
