feat: contact page translations

--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,13 @@
 
       <div id="contact-bg">
         <div class="info-bg">
-          <div id="header-contact"><h2>Kontakt</h2></div>
+          <div id="header-contact"><h2>Contact Us</h2></div>
           <div id="description">
             <div class="ct-content hidden">
-              Etiam commodo dui eget wisi. Sed elit dui, pellentesque a,
-              faucibus vel, interdum nec, diam. Sed ac dolor sit amet purus
-              malesuada congue. Ut tempus purus at lorem. Itaque earum rerum hic
-              tenetur a sapiente delectus, ut aut reiciendis voluptatibus
-              maiores alias consequatur aut perferendis doloribus asperiores
-              repellat. Duis ante orci, molestie vitae vehicula venenatis,
-              tincidunt ac pede.
+              Thank you for visiting our website. If you have any questions or
+              concerns, please feel free to contact us. Our customer service
+              team is available 24/7 to assist you. We are always happy to help
+              and look forward to hearing from you!
             </div>
           </div>
           <div id="contact-links" class="hidden">
@@ -59,7 +56,7 @@
                   class="ct-icon"
                 ></iconify-icon>
                 <a href="mailto: autoZing@pujcauto.com"
-                  >autoZing@pujcauto.com</a
+                  >autoZing@rentacar.com</a
                 >
               </div>
               <div class="ct-info">
