--- a/rentals.html
+++ b/rentals.html
@@ -75,7 +75,7 @@
 
       <div id="german">
         <h2>German</h2>
-        <div class="car-column carHidden">
+        <div class="car-column">
           <div class="car-panel">
             <div class="model-img">
               <img
@@ -125,7 +125,7 @@
             </div>
           </div>
         </div>
-        <div class="car-column carHidden">
+        <div class="car-column">
           <div class="car-panel">
             <div class="model-img">
               <img
@@ -179,7 +179,7 @@
 
       <div id="italian">
         <h2>Italian</h2>
-        <div class="car-column carHidden">
+        <div class="car-column">
           <div class="car-panel">
             <div class="model-img">
               <img
@@ -233,7 +233,7 @@
 
       <div id="american">
         <h2>American</h2>
-        <div class="car-column carHidden">
+        <div class="car-column">
           <div class="car-panel">
             <div class="model-img">
               <img
